--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     tools:context=".SettingsActivity">
 
     <FrameLayout
-        android:id="@+id/main_preference"
+        android:id="@+id/main_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
