--- a/app/src/main/res/layout/activity_emailsignup.xml
+++ b/app/src/main/res/layout/activity_emailsignup.xml
@@ -11,36 +11,14 @@
     android:background="@color/colorAccent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/authimageview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitEnd"
-        app:layout_constraintBottom_toTopOf="@+id/authprimaryback"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/splash" />
-
-    <View
-        android:id="@+id/authprimaryback"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/authimageview"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
     <ScrollView
-        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -64,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="50dp"
-                    android:text="@string/app_name"
+                    android:text="@string/create_account"
                     android:textColor="@color/colorPrimary"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -102,39 +80,44 @@
                     android:textSize="16sp"
                     android:theme="@style/EditTextColorControl" />
 
+                <EditText
+                    android:id="@+id/fieldConfirmPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="30dp"
+                    android:autofillHints=""
+                    android:background="@color/colorWhite"
+                    android:hint="@string/confirmpassword"
+                    android:inputType="textPassword"
+                    android:paddingStart="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorGray"
+                    android:textSize="16sp"
+                    android:theme="@style/EditTextColorControl" />
+
                 <Button
-                    android:id="@+id/emailSignInButton"
+                    android:id="@+id/emailCreateAccountButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="40dp"
                     android:layout_marginEnd="30dp"
                     android:background="@color/colorPrimary"
-                    android:text="@string/login"
+                    android:text="@string/signup"
                     android:textColor="@color/colorWhite"
                     android:textSize="16sp"
                     tools:ignore="ButtonStyle" />
 
-                <Button
-                    android:id="@+id/emailSignUpButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="30dp"
-                    android:background="@color/colorWhite"
-                    android:text="@string/signup"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    tools:ignore="ButtonStyle" />
-
                 <TextView
-                    android:id="@+id/sendresetpassbutton"
+                    android:id="@+id/signupprivacypolicy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
+                    android:layout_marginBottom="50dp"
                     android:gravity="center"
-                    android:text="@string/forget_password"
+                    android:text="@string/privacypolicy"
                     android:textColor="@color/colorWhite"
                     android:textSize="16sp" />
 
@@ -145,7 +128,7 @@
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
-        android:id="@+id/topadview"
+        android:id="@+id/signupadview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="SMART_BANNER"
