--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGray">#808080</color>
+    <color name="colorGray">#AAAAAA</color>
     <color name="colorLightGray">#D3D3D3</color>
     <color name="colorBlack">#000000</color>
     <color name="ColorRed">#FF0000</color>
