--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,9 +89,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/onoffbutton"
-                android:src="@drawable/onoffbutton"
-                android:enabled="true"
+                android:background="@drawable/onbutton"
                 android:text="@string/switchback"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp"
@@ -106,9 +104,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/onoffbutton"
-                android:src="@drawable/onoffbutton"
-                android:enabled="false"
+                android:background="@drawable/offbutton"
                 android:text="@string/switchgo"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp"
@@ -123,9 +119,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/onoffbutton"
-                android:src="@drawable/onoffbutton"
-                android:enabled="true"
+                android:background="@drawable/onbutton"
                 android:text="@string/timestart"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp"
@@ -140,9 +134,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/onoffbutton"
-                android:src="@drawable/onoffbutton"
-                android:enabled="false"
+                android:background="@drawable/offbutton"
                 android:text="@string/timestop"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp"
