--- a/app/src/main/res/layout/activity_emailauth.xml
+++ b/app/src/main/res/layout/activity_emailauth.xml
@@ -18,7 +18,8 @@
         android:scaleType="fitEnd"
         app:layout_constraintBottom_toTopOf="@+id/authprimaryback"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/splash" />
+        app:srcCompat="@drawable/splash"
+        tools:ignore="ContentDescription" />
 
     <View
         android:id="@+id/authprimaryback"
@@ -76,14 +77,15 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                     android:autofillHints=""
-                    android:background="@color/colorWhite"
+                    android:background="@drawable/customtextfield"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:paddingStart="15dp"
                     android:textColor="@color/colorPrimary"
                     android:textColorHint="@color/colorGray"
                     android:textSize="16sp"
-                    android:theme="@style/EditTextColorControl" />
+                    android:theme="@style/EditTextColorControl"
+                    tools:ignore="RtlSymmetry" />
 
                 <EditText
                     android:id="@+id/fieldPassword"
@@ -93,14 +95,15 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="30dp"
                     android:autofillHints=""
-                    android:background="@color/colorWhite"
+                    android:background="@drawable/customtextfield"
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:paddingStart="15dp"
                     android:textColor="@color/colorPrimary"
                     android:textColorHint="@color/colorGray"
                     android:textSize="16sp"
-                    android:theme="@style/EditTextColorControl" />
+                    android:theme="@style/EditTextColorControl"
+                    tools:ignore="RtlSymmetry" />
 
                 <Button
                     android:id="@+id/emailSignInButton"
@@ -109,7 +112,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/registerbutton"
                     android:text="@string/login"
                     android:textColor="@color/colorWhite"
                     android:textSize="16sp"
@@ -122,7 +125,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="30dp"
-                    android:background="@color/colorWhite"
+                    android:background="@drawable/nextbutton"
                     android:text="@string/signup"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
